--- a/ProjectApp/ProjectApp.vcxproj.filters
+++ b/ProjectApp/ProjectApp.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="SellerCompanyForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LoginCompany.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProjectApp.cpp">
@@ -53,6 +56,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SellerCompanyForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LoginCompany.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
