--- a/ProjectApp/ProjectApp.vcxproj.filters
+++ b/ProjectApp/ProjectApp.vcxproj.filters
@@ -38,6 +38,18 @@
     <ClInclude Include="LoginCompany.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProductSearchForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TransactionForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CustomerForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LoginCustomer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProjectApp.cpp">
@@ -59,6 +71,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LoginCompany.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ProductSearchForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TransactionForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CustomerForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LoginCustomer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
