--- a/ProjectApp/ProjectApp.vcxproj.filters
+++ b/ProjectApp/ProjectApp.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="LoginCustomer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\LPOO_PROJECT\ComboBoxItem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProjectApp.cpp">
@@ -83,6 +86,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LoginCustomer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\LPOO_PROJECT\ComboBoxItem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
